# chemistry-equations-backbone

./: .gitignore  Cargo.toml  ndk_thing.sh
Chemistryequationsbackbone/: Package.swift
aar/java/: ChemistryEquationsBackbone.kt
scripts/: build_android.sh  build_ios.sh
src/: density.rs  lib.rs  lib.udl  types.rs
