[package]
name = "ChemistryEquationsBackbone"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib", "cdylib"]
name = "ChemistryEquationsBackbone"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
